--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "3.2.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.15",
     "core-js": "^2.4.1",
+    "ng2-pdf-viewer": "^0.1.5",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
+    "videogular2": "^3.2.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
